--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 35vh;
+}
+.btn{
+  padding: 20px 40px;
+  border: none;
+  background-color: blue;
   color: white;
+  border-radius: 5px;
+  margin-right: 20px;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.NUMBER{
+  margin-right: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Red{
+ color: red;
+}
+/************************************************************/
+.app2{
+  height: 35vh;
+  background-color: yellow;
+}
+.app2 input{
+  padding: 20px;
+  margin-top: 10px;
+}
+/************************************************************/
+.tweetStyle{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 35vh;
+  background-color: rgb(0, 140, 255);
+}
+.tweetStyle button{
+  padding: 20px 40px;
+  border: none;
+  background-color: rgb(0, 255, 200);
+  color: black;
+  border-radius: 5px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+/**********************************************************/
+.axis{
+  height: 25vh;
+  background-color: rgb(255, 0, 21);
+}
+/**********************************************************/
+.compo{
+  height: 25vh;
+  background-color: rgb(0, 255, 21);
 }
